--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ionic-food-example",
-  "homepage": ".",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/core": "2.4.7",
-    "@capacitor/ios": "^2.4.7",
+    "@capacitor/android": "^2.5.0",
+    "@capacitor/core": "2.5.0",
+    "@capacitor/ios": "2.5.0",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -19,13 +19,13 @@
     "@types/react-router-dom": "^5.1.7",
     "animate.css": "^4.1.1",
     "ionicons": "^5.4.0",
-    "node-sass": "^4.14.1",
     "pullstate": "^1.22.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "sass": "^1.77.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -40,6 +40,12 @@
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
     "workbox-streams": "^5.1.4"
+  },
+  "devDependencies": {
+    "@capacitor/cli": "2.5.0"
+  },
+  "resolutions": {
+    "postcss": "^8.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,9 +72,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@capacitor/cli": "2.4.7"
   },
   "description": "An Ionic project"
 }
